@@ -19,8 +19,8 @@ public class CoreModule extends Module {
         dEnv.put("true", DBool.TRUE);
         dEnv.put("false", DBool.FALSE);
         dEnv.addTokenFunction("+", ((args, env) -> {
-            if (!(args.getFirst() instanceof DArithmetic arithmetic))
-                throw new DevoreCastException(args.getFirst().type(), "arithmetic");
+            if (!(args.get(0) instanceof DArithmetic arithmetic))
+                throw new DevoreCastException(args.get(0).type(), "arithmetic");
             for (int i = 1; i < args.size(); ++i) {
                 if (!(args.get(i) instanceof DArithmetic))
                     throw new DevoreCastException(args.get(i).type(), "arithmetic");
@@ -29,8 +29,8 @@ public class CoreModule extends Module {
             return arithmetic;
         }), 1, true);
         dEnv.addTokenFunction("-", ((args, env) -> {
-            if (!(args.getFirst() instanceof DArithmetic arithmetic))
-                throw new DevoreCastException(args.getFirst().type(), "arithmetic");
+            if (!(args.get(0) instanceof DArithmetic arithmetic))
+                throw new DevoreCastException(args.get(0).type(), "arithmetic");
             if (args.size() == 1)
                 return DInt.valueOf(0).sub(arithmetic);
             for (int i = 1; i < args.size(); ++i) {
@@ -41,8 +41,8 @@ public class CoreModule extends Module {
             return arithmetic;
         }), 1, true);
         dEnv.addTokenFunction("*", ((args, env) -> {
-            if (!(args.getFirst() instanceof DArithmetic arithmetic))
-                throw new DevoreCastException(args.getFirst().type(), "arithmetic");
+            if (!(args.get(0) instanceof DArithmetic arithmetic))
+                throw new DevoreCastException(args.get(0).type(), "arithmetic");
             for (int i = 1; i < args.size(); ++i) {
                 if (!(args.get(i) instanceof DArithmetic))
                     throw new DevoreCastException(args.get(i).type(), "arithmetic");
@@ -51,8 +51,8 @@ public class CoreModule extends Module {
             return arithmetic;
         }), 1, true);
         dEnv.addTokenFunction("/", ((args, env) -> {
-            if (!(args.getFirst() instanceof DArithmetic arithmetic))
-                throw new DevoreCastException(args.getFirst().type(), "arithmetic");
+            if (!(args.get(0) instanceof DArithmetic arithmetic))
+                throw new DevoreCastException(args.get(0).type(), "arithmetic");
             for (int i = 1; i < args.size(); ++i) {
                 if (!(args.get(i) instanceof DArithmetic))
                     throw new DevoreCastException(args.get(i).type(), "arithmetic");
@@ -61,11 +61,11 @@ public class CoreModule extends Module {
             return arithmetic;
         }), 1, true);
         dEnv.addTokenFunction("pow", ((args, env) -> {
-            if (!(args.getFirst() instanceof DNumber))
-                throw new DevoreCastException(args.getFirst().type(), "number");
+            if (!(args.get(0) instanceof DNumber))
+                throw new DevoreCastException(args.get(0).type(), "number");
             if (!(args.get(1) instanceof DNumber))
                 throw new DevoreCastException(args.get(1).type(), "number");
-            return ((DNumber) args.getFirst()).pow(((DNumber) args.get(1)));
+            return ((DNumber) args.get(0)).pow(((DNumber) args.get(1)));
         }), 2, false);
         dEnv.addTokenFunction("average", ((args, env) -> {
             DFloat num = DFloat.valueOf(0);
@@ -77,46 +77,46 @@ public class CoreModule extends Module {
             return num.div(DFloat.valueOf(args.size()));
         }), 1, true);
         dEnv.addTokenFunction("mod", ((args, env) -> {
-            if (!(args.getFirst() instanceof DInt))
-                throw new DevoreCastException(args.getFirst().type(), "int");
+            if (!(args.get(0) instanceof DInt))
+                throw new DevoreCastException(args.get(0).type(), "int");
             if (!(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
-            return ((DInt) args.getFirst()).mod(((DInt) args.get(1)));
+            return ((DInt) args.get(0)).mod(((DInt) args.get(1)));
         }), 2, false);
         dEnv.addTokenFunction("abs", ((args, env) -> {
-            if (!(args.getFirst() instanceof DNumber))
-                throw new DevoreCastException(args.getFirst().type(), "number");
-            return ((DNumber) args.getFirst()).abs();
+            if (!(args.get(0) instanceof DNumber))
+                throw new DevoreCastException(args.get(0).type(), "number");
+            return ((DNumber) args.get(0)).abs();
         }), 1, false);
         dEnv.addTokenFunction("sqrt", ((args, env) -> {
-            if (!(args.getFirst() instanceof DNumber))
-                throw new DevoreCastException(args.getFirst().type(), "number");
-            return ((DNumber) args.getFirst()).sqrt();
+            if (!(args.get(0) instanceof DNumber))
+                throw new DevoreCastException(args.get(0).type(), "number");
+            return ((DNumber) args.get(0)).sqrt();
         }), 1, false);
         dEnv.addTokenFunction("sin", ((args, env) -> {
-            if (!(args.getFirst() instanceof DNumber))
-                throw new DevoreCastException(args.getFirst().type(), "number");
-            return ((DNumber) args.getFirst()).sin();
+            if (!(args.get(0) instanceof DNumber))
+                throw new DevoreCastException(args.get(0).type(), "number");
+            return ((DNumber) args.get(0)).sin();
         }), 1, false);
         dEnv.addTokenFunction("cos", ((args, env) -> {
-            if (!(args.getFirst() instanceof DNumber))
-                throw new DevoreCastException(args.getFirst().type(), "number");
-            return ((DNumber) args.getFirst()).cos();
+            if (!(args.get(0) instanceof DNumber))
+                throw new DevoreCastException(args.get(0).type(), "number");
+            return ((DNumber) args.get(0)).cos();
         }), 1, false);
         dEnv.addTokenFunction("tan", ((args, env) -> {
-            if (!(args.getFirst() instanceof DNumber))
-                throw new DevoreCastException(args.getFirst().type(), "number");
-            return ((DNumber) args.getFirst()).tan();
+            if (!(args.get(0) instanceof DNumber))
+                throw new DevoreCastException(args.get(0).type(), "number");
+            return ((DNumber) args.get(0)).tan();
         }), 1, false);
         dEnv.addTokenFunction("ceil", ((args, env) -> {
-            if (!(args.getFirst() instanceof DNumber))
-                throw new DevoreCastException(args.getFirst().type(), "number");
-            return ((DNumber) args.getFirst()).ceil();
+            if (!(args.get(0) instanceof DNumber))
+                throw new DevoreCastException(args.get(0).type(), "number");
+            return ((DNumber) args.get(0)).ceil();
         }), 1, false);
         dEnv.addTokenFunction("floor", ((args, env) -> {
-            if (!(args.getFirst() instanceof DNumber))
-                throw new DevoreCastException(args.getFirst().type(), "number");
-            return ((DNumber) args.getFirst()).floor();
+            if (!(args.get(0) instanceof DNumber))
+                throw new DevoreCastException(args.get(0).type(), "number");
+            return ((DNumber) args.get(0)).floor();
         }), 1, false);
         dEnv.addTokenFunction("require", ((args, env) -> {
             for (Token t : args)
@@ -297,28 +297,28 @@ public class CoreModule extends Module {
             return DFunction.newFunction(df, parameters.size(), false);
         }), 2, true);
         dEnv.addTokenFunction("apply", ((args, env) -> {
-            if (!(args.getFirst() instanceof DFunction))
-                throw new DevoreCastException(args.getFirst().type(), "function");
+            if (!(args.get(0) instanceof DFunction))
+                throw new DevoreCastException(args.get(0).type(), "function");
             List<Token> parameters = new ArrayList<>();
             for (int i = 1; i < args.size(); ++i)
                 parameters.add(args.get(i));
             AstNode asts = AstNode.nullAst.copy();
             for (Token arg : parameters)
                 asts.add(new AstNode(arg));
-            return ((DFunction) args.getFirst()).call(asts, env.createChild());
+            return ((DFunction) args.get(0)).call(asts, env.createChild());
         }), 1, true);
         dEnv.addTokenFunction(">", ((args, env) ->
-                DBool.valueOf(args.getFirst().compareTo(args.get(1)) > 0)), 2, false);
+                DBool.valueOf(args.get(0).compareTo(args.get(1)) > 0)), 2, false);
         dEnv.addTokenFunction("<", ((args, env) ->
-                DBool.valueOf(args.getFirst().compareTo(args.get(1)) < 0)), 2, false);
+                DBool.valueOf(args.get(0).compareTo(args.get(1)) < 0)), 2, false);
         dEnv.addTokenFunction("=", ((args, env) ->
-                DBool.valueOf(args.getFirst().compareTo(args.get(1)) == 0)), 2, false);
+                DBool.valueOf(args.get(0).compareTo(args.get(1)) == 0)), 2, false);
         dEnv.addTokenFunction("/=", ((args, env) ->
-                DBool.valueOf(args.getFirst().compareTo(args.get(1)) != 0)), 2, false);
+                DBool.valueOf(args.get(0).compareTo(args.get(1)) != 0)), 2, false);
         dEnv.addTokenFunction(">=", ((args, env) ->
-                DBool.valueOf(args.getFirst().compareTo(args.get(1)) >= 0)), 2, false);
+                DBool.valueOf(args.get(0).compareTo(args.get(1)) >= 0)), 2, false);
         dEnv.addTokenFunction("<=", ((args, env) ->
-                DBool.valueOf(args.getFirst().compareTo(args.get(1)) <= 0)), 2, false);
+                DBool.valueOf(args.get(0).compareTo(args.get(1)) <= 0)), 2, false);
         dEnv.addSymbolFunction("if", (ast, env) -> {
             Token result = DWord.WORD_NIL;
             Env newEnv = env.createChild();
@@ -410,20 +410,20 @@ public class CoreModule extends Module {
             return DBool.FALSE;
         }), 1, true);
         dEnv.addTokenFunction("not", ((args, env) -> {
-            if (!(args.getFirst() instanceof DBool))
-                throw new DevoreCastException(args.getFirst().type(), "bool");
-            if (((DBool) args.getFirst()).bool)
+            if (!(args.get(0) instanceof DBool))
+                throw new DevoreCastException(args.get(0).type(), "bool");
+            if (((DBool) args.get(0)).bool)
                 return DBool.FALSE;
             return DBool.TRUE;
         }), 1, false);
         dEnv.addTokenFunction("random", ((args, env) -> {
-            if (!(args.getFirst() instanceof DInt))
-                throw new DevoreCastException(args.getFirst().type(), "int");
+            if (!(args.get(0) instanceof DInt))
+                throw new DevoreCastException(args.get(0).type(), "int");
             if (args.size() > 1)
                 if (!(args.get(1) instanceof DInt))
                     throw new DevoreCastException(args.get(1).type(), "int");
-            BigInteger start = args.size() == 1 ? BigInteger.ZERO : ((DInt) args.getFirst()).toBigInteger();
-            BigInteger end = args.size() == 1 ? ((DInt) args.getFirst()).toBigInteger().subtract(BigInteger.ONE) : ((DInt) args.get(1)).toBigInteger().subtract(BigInteger.ONE);
+            BigInteger start = args.size() == 1 ? BigInteger.ZERO : ((DInt) args.get(0)).toBigInteger();
+            BigInteger end = args.size() == 1 ? ((DInt) args.get(0)).toBigInteger().subtract(BigInteger.ONE) : ((DInt) args.get(1)).toBigInteger().subtract(BigInteger.ONE);
             Random rand = new Random();
             int scale = end.toString().length();
             StringBuilder generated = new StringBuilder();
@@ -447,13 +447,13 @@ public class CoreModule extends Module {
         }), 1, true);
         dEnv.addTokenFunction("list", ((args, env) -> DList.valueOf(new ArrayList<>(args))), 1, true);
         dEnv.addTokenFunction("list-contains", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList))
-                throw new DevoreCastException(args.getFirst().type(), "list");
-            return DBool.valueOf(((DList) args.getFirst()).contains(args.get(1)));
+            if (!(args.get(0) instanceof DList))
+                throw new DevoreCastException(args.get(0).type(), "list");
+            return DBool.valueOf(((DList) args.get(0)).contains(args.get(1)));
         }), 2, false);
         dEnv.addTokenFunction("list-get", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             if (!(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
             if (list.size() == 0)
@@ -461,8 +461,8 @@ public class CoreModule extends Module {
             return list.get(((DInt) args.get(1)).toBigInteger().intValue());
         }), 2, false);
         dEnv.addTokenFunction("list-set", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             if (!(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
             if (list.size() == 0)
@@ -470,8 +470,8 @@ public class CoreModule extends Module {
             return list.set(((DInt) args.get(1)).toBigInteger().intValue(), args.get(2), false);
         }), 3, false);
         dEnv.addTokenFunction("list-remove", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             if (list.size() == 0)
                 return DWord.WORD_NIL;
             if (!(args.get(1) instanceof DInt))
@@ -479,13 +479,13 @@ public class CoreModule extends Module {
             return list.remove(args.get(1), false);
         }), 2, false);
         dEnv.addTokenFunction("list-add", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             return list.add(args.get(1), false);
         }), 2, false);
         dEnv.addTokenFunction("list-set!", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             if (!(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
             if (list.size() == 0)
@@ -493,8 +493,8 @@ public class CoreModule extends Module {
             return list.set(((DInt) args.get(1)).toBigInteger().intValue(), args.get(2), true);
         }), 3, false);
         dEnv.addTokenFunction("list-remove!", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             if (list.size() == 0)
                 return DWord.WORD_NIL;
             if (!(args.get(1) instanceof DInt))
@@ -502,50 +502,50 @@ public class CoreModule extends Module {
             return list.remove(args.get(1), false);
         }), 2, false);
         dEnv.addTokenFunction("list-add!", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             return list.add(args.get(1), true);
         }), 2, false);
         dEnv.addTokenFunction("head", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             if (list.size() == 0)
                 return DWord.WORD_NIL;
             return list.get(0);
         }), 1, false);
         dEnv.addTokenFunction("last", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             if (list.size() == 0)
                 return DWord.WORD_NIL;
             return list.get(list.size() - 1);
         }), 1, false);
         dEnv.addTokenFunction("tail", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             return list.subList(1, list.size());
         }), 1, false);
         dEnv.addTokenFunction("init", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             return list.subList(0, list.size() - 1);
         }), 1, false);
         dEnv.addTokenFunction("length", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList))
-                return DInt.valueOf(args.getFirst().toString().length());
-            return DInt.valueOf(((DList) args.getFirst()).size());
+            if (!(args.get(0) instanceof DList))
+                return DInt.valueOf(args.get(0).toString().length());
+            return DInt.valueOf(((DList) args.get(0)).size());
         }), 1, false);
         dEnv.addTokenFunction("reverse", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList tokens))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList tokens))
+                throw new DevoreCastException(args.get(0).type(), "list");
             List<Token> temp = new ArrayList<>();
             for (int i = tokens.size() - 1; i >= 0; --i)
                 temp.add(tokens.get(i));
             return DList.valueOf(new ArrayList<>(temp));
         }), 1, false);
         dEnv.addTokenFunction("reverse!", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList tokens))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList tokens))
+                throw new DevoreCastException(args.get(0).type(), "list");
             List<Token> temp = new ArrayList<>();
             for (int i = tokens.size() - 1; i >= 0; --i)
                 temp.add(tokens.get(i));
@@ -555,13 +555,13 @@ public class CoreModule extends Module {
             return tokens;
         }), 1, false);
         dEnv.addTokenFunction("sort", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             return list.sort(false);
         }), 1, false);
         dEnv.addTokenFunction("sort!", ((args, env) -> {
-            if (!(args.getFirst() instanceof DList list))
-                throw new DevoreCastException(args.getFirst().type(), "list");
+            if (!(args.get(0) instanceof DList list))
+                throw new DevoreCastException(args.get(0).type(), "list");
             return list.sort(true);
         }), 1, true);
         dEnv.addTokenFunction("++", ((args, env) -> {
@@ -590,8 +590,8 @@ public class CoreModule extends Module {
             return result;
         }), 1, true);
         dEnv.addTokenFunction("map", ((args, env) -> {
-            if (!(args.getFirst() instanceof DFunction))
-                throw new DevoreCastException(args.getFirst().type(), "function");
+            if (!(args.get(0) instanceof DFunction))
+                throw new DevoreCastException(args.get(0).type(), "function");
             if (!(args.get(1) instanceof DList))
                 throw new DevoreCastException(args.get(1).type(), "list");
             List<Token> result = new ArrayList<>();
@@ -604,13 +604,13 @@ public class CoreModule extends Module {
                         throw new DevoreCastException(args.get(j + 1).type(), "list");
                     parameters.add(((DList) args.get(j + 1)).get(i));
                 }
-                ((DFunction) args.getFirst()).call(parameters.toArray(Token[]::new), env.createChild());
+                ((DFunction) args.get(0)).call(parameters.toArray(Token[]::new), env.createChild());
             }
             return DList.valueOf(result);
         }), 2, true);
         dEnv.addTokenFunction("for-each", ((args, env) -> {
-            if (!(args.getFirst() instanceof DFunction))
-                throw new DevoreCastException(args.getFirst().type(), "function");
+            if (!(args.get(0) instanceof DFunction))
+                throw new DevoreCastException(args.get(0).type(), "function");
             if (!(args.get(1) instanceof DList))
                 throw new DevoreCastException(args.get(1).type(), "list");
             List<Token> tokens = ((DList) args.get(1)).toList();
@@ -622,35 +622,35 @@ public class CoreModule extends Module {
                         throw new DevoreCastException(args.get(j + 1).type(), "list");
                     parameters.add(((DList) args.get(j + 1)).get(i));
                 }
-                ((DFunction) args.getFirst()).call(parameters.toArray(Token[]::new), env.createChild());
+                ((DFunction) args.get(0)).call(parameters.toArray(Token[]::new), env.createChild());
             }
             return DWord.WORD_NIL;
         }), 2, true);
         dEnv.addTokenFunction("foldr", ((args, env) -> {
-            if (!(args.getFirst() instanceof DFunction))
-                throw new DevoreCastException(args.getFirst().type(), "function");
+            if (!(args.get(0) instanceof DFunction))
+                throw new DevoreCastException(args.get(0).type(), "function");
             if (!(args.get(2) instanceof DList))
                 throw new DevoreCastException(args.get(2).type(), "list");
             var result = args.get(1);
             List<Token> tokens = ((DList) args.get(2)).toList();
             for (int i = tokens.size() - 1; i >= 0; --i)
-                result = ((DFunction) args.getFirst()).call(new Token[]{tokens.get(i), result}, env.createChild());
+                result = ((DFunction) args.get(0)).call(new Token[]{tokens.get(i), result}, env.createChild());
             return result;
         }), 3, false);
         dEnv.addTokenFunction("foldl", ((args, env) -> {
-            if (!(args.getFirst() instanceof DFunction))
-                throw new DevoreCastException(args.getFirst().type(), "function");
+            if (!(args.get(0) instanceof DFunction))
+                throw new DevoreCastException(args.get(0).type(), "function");
             if (!(args.get(2) instanceof DList))
                 throw new DevoreCastException(args.get(2).type(), "list");
             var result = args.get(1);
             List<Token> tokens = ((DList) args.get(2)).toList();
             for (int i = tokens.size() - 1; i >= 0; --i)
-                result = ((DFunction) args.getFirst()).call(new Token[]{result, tokens.get(i)}, env.createChild());
+                result = ((DFunction) args.get(0)).call(new Token[]{result, tokens.get(i)}, env.createChild());
             return result;
         }), 3, false);
         dEnv.addTokenFunction("filter", ((args, env) -> {
-            if (!(args.getFirst() instanceof DFunction))
-                throw new DevoreCastException(args.getFirst().type(), "function");
+            if (!(args.get(0) instanceof DFunction))
+                throw new DevoreCastException(args.get(0).type(), "function");
             if (!(args.get(1) instanceof DList))
                 throw new DevoreCastException(args.get(1).type(), "list");
             List<Token> result = new ArrayList<>();
@@ -658,7 +658,7 @@ public class CoreModule extends Module {
             for (Token token : tokens) {
                 AstNode asts = AstNode.nullAst.copy();
                 asts.add(new AstNode(token));
-                Token condition = ((DFunction) args.getFirst()).call(asts, env.createChild());
+                Token condition = ((DFunction) args.get(0)).call(asts, env.createChild());
                 if (!(condition instanceof DBool))
                     throw new DevoreCastException(condition.type(), "list");
                 if (((DBool) condition).bool)
@@ -667,15 +667,15 @@ public class CoreModule extends Module {
             return DList.valueOf(result);
         }), 2, false);
         dEnv.addTokenFunction("range", ((args, env) -> {
-            if (!(args.getFirst() instanceof DInt))
-                throw new DevoreCastException(args.getFirst().type(), "int");
+            if (!(args.get(0) instanceof DInt))
+                throw new DevoreCastException(args.get(0).type(), "int");
             if (args.size() > 1 && !(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
             if (args.size() > 2 && !(args.get(2) instanceof DInt))
                 throw new DevoreCastException(args.get(2).type(), "int");
-            BigInteger start = args.size() > 1 ? ((DInt) args.getFirst()).toBigInteger() : BigInteger.ZERO;
+            BigInteger start = args.size() > 1 ? ((DInt) args.get(0)).toBigInteger() : BigInteger.ZERO;
             BigInteger end = args.size() > 1 ? ((DInt) args.get(1)).toBigInteger().subtract(BigInteger.ONE)
-                    : ((DInt) args.getFirst()).toBigInteger().subtract(BigInteger.ONE);
+                    : ((DInt) args.get(0)).toBigInteger().subtract(BigInteger.ONE);
             BigInteger step = args.size() > 2 ? ((DInt) args.get(2)).toBigInteger() : BigInteger.ONE;
             BigInteger size = end.subtract(start).divide(step);
             List<Token> list = new ArrayList<>();
@@ -687,57 +687,57 @@ public class CoreModule extends Module {
             return DList.valueOf(list);
         }), 1, true);
         dEnv.addTokenFunction("string->int", ((args, env) -> {
-            if (!(args.getFirst() instanceof DString))
-                throw new DevoreCastException(args.getFirst().type(), "string");
-            return DInt.valueOf(new BigInteger(args.getFirst().toString()));
+            if (!(args.get(0) instanceof DString))
+                throw new DevoreCastException(args.get(0).type(), "string");
+            return DInt.valueOf(new BigInteger(args.get(0).toString()));
         }), 1, false);
         dEnv.addTokenFunction("string->float", ((args, env) -> {
-            if (!(args.getFirst() instanceof DString))
-                throw new DevoreCastException(args.getFirst().type(), "string");
-            return DFloat.valueOf(new BigDecimal(args.getFirst().toString()));
+            if (!(args.get(0) instanceof DString))
+                throw new DevoreCastException(args.get(0).type(), "string");
+            return DFloat.valueOf(new BigDecimal(args.get(0).toString()));
         }), 1, false);
         dEnv.addTokenFunction("string->bool", ((args, env) -> {
-            if (!(args.getFirst() instanceof DString))
-                throw new DevoreCastException(args.getFirst().type(), "string");
-            return "true".equals(args.getFirst().toString()) ? DBool.TRUE : DBool.FALSE;
+            if (!(args.get(0) instanceof DString))
+                throw new DevoreCastException(args.get(0).type(), "string");
+            return "true".equals(args.get(0).toString()) ? DBool.TRUE : DBool.FALSE;
         }), 1, false);
-        dEnv.addTokenFunction("->string", ((args, env) -> DString.valueOf(args.getFirst().toString())), 1, false);
+        dEnv.addTokenFunction("->string", ((args, env) -> DString.valueOf(args.get(0).toString())), 1, false);
         dEnv.addTokenFunction("string->chars", ((args, env) -> {
-            if (!(args.getFirst() instanceof DString))
-                throw new DevoreCastException(args.getFirst().type(), "string");
-            char[] chars = args.getFirst().toString().toCharArray();
+            if (!(args.get(0) instanceof DString))
+                throw new DevoreCastException(args.get(0).type(), "string");
+            char[] chars = args.get(0).toString().toCharArray();
             List<Token> tokens = new ArrayList<>();
             for (char c : chars)
                 tokens.add(DString.valueOf(String.valueOf(c)));
             return DList.valueOf(tokens);
         }), 1, false);
         dEnv.addTokenFunction("char->ascii", ((args, env) -> {
-            if (!(args.getFirst() instanceof DString))
-                throw new DevoreCastException(args.getFirst().type(), "string");
-            return DInt.valueOf((int) args.getFirst().toString().charAt(0));
+            if (!(args.get(0) instanceof DString))
+                throw new DevoreCastException(args.get(0).type(), "string");
+            return DInt.valueOf((int) args.get(0).toString().charAt(0));
         }), 1, false);
         dEnv.addTokenFunction("ascii->char", ((args, env) -> {
-            if (!(args.getFirst() instanceof DInt))
-                throw new DevoreCastException(args.getFirst().type(), "int");
-            return DString.valueOf(String.valueOf((char) ((DInt) args.getFirst()).toBigInteger().intValue()));
+            if (!(args.get(0) instanceof DInt))
+                throw new DevoreCastException(args.get(0).type(), "int");
+            return DString.valueOf(String.valueOf((char) ((DInt) args.get(0)).toBigInteger().intValue()));
         }), 1, false);
         dEnv.addTokenFunction("exit", ((args, env) -> {
-            if (!(args.getFirst() instanceof DInt))
-                throw new DevoreCastException(args.getFirst().type(), "int");
-            System.exit(((DInt) args.getFirst()).toBigInteger().intValue());
-            return args.getFirst();
+            if (!(args.get(0) instanceof DInt))
+                throw new DevoreCastException(args.get(0).type(), "int");
+            System.exit(((DInt) args.get(0)).toBigInteger().intValue());
+            return args.get(0);
         }), 1, false);
         dEnv.addTokenFunction("sleep", ((args, env) -> {
-            if (!(args.getFirst() instanceof DInt))
-                throw new DevoreCastException(args.getFirst().type(), "int");
+            if (!(args.get(0) instanceof DInt))
+                throw new DevoreCastException(args.get(0).type(), "int");
             try {
-                Thread.sleep(((DInt) args.getFirst()).toBigInteger().longValue());
+                Thread.sleep(((DInt) args.get(0)).toBigInteger().longValue());
             } catch (InterruptedException e) {
-                return args.getFirst();
+                return args.get(0);
             }
-            return args.getFirst();
+            return args.get(0);
         }), 1, false);
-        dEnv.addTokenFunction("type", ((args, env) -> DString.valueOf(args.getFirst().type())), 1, false);
+        dEnv.addTokenFunction("type", ((args, env) -> DString.valueOf(args.get(0).type())), 1, false);
         dEnv.addTokenFunction("time", ((args, env) -> DInt.valueOf(System.currentTimeMillis())), 0, false);
     }
 }
